--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@ body {
 .bg-image{
   height: 100%;
   width: 100%;
+  
 }
 
 .container{
   position: relative;
+  height: 100vh;
 }
 
 .everything{
@@ -109,8 +111,11 @@ footer {
 
 @media (max-width: 960px ){
 
-  .bg-image{
+  .container{
     height: 100vh;
-
+  } 
+  .everything{
+    top:50px;
+    
   }
 }
