--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 .bg-image{
   height: 100%;
   width: 100%;
-  
+  z-index: -1;
 }
 
 .container{
@@ -20,7 +20,6 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-    
   margin: auto;
 }
 
@@ -115,7 +114,9 @@ footer {
     height: 100vh;
   } 
   .everything{
-    top:50px;
-    
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
   }
 }
