--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .everything{
   position:absolute;
-  top:0;
+  top:50px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -113,12 +113,4 @@ footer {
   .container{
     height: 100vh;
   } 
-  .everything{
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    justify-self: center;
-
-    margin-top: 200px;
-  }
 }
