--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 .container{
   position: relative;
-  height: 100%;
+  height: 100vh;
 }
 
 .everything{
@@ -111,7 +111,7 @@ footer {
 @media (max-width: 960px ){
 
   .container{
-    height: 100vh;
+    height: 960px;
   }
   .everything{
     position:absolute;
