--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,31 +44,31 @@ footer {
 }
 
 .a {
- background-image: url('./images/tom1.png');
+ background-image: url('../assets/images/tom1.png');
 }
 
 .s {
-  background-image: url('./images/tom2.png');
+  background-image: url('../assets/images/tom2.png');
 }
 
 .d {
-  background-image: url('./images/tom3.png');
+  background-image: url('../assets/images/tom3.png');
 }
 
 .f {
-  background-image: url('./images/tom4.png');
+  background-image: url('../assets/images/tom4.png');
 }
 
 .j {
-  background-image: url('./images/crash.png');
+  background-image: url('../assets/images/crash.png');
 }
 
 .k {
-  background-image: url('./images/kick.png');
+  background-image: url('../assets/images/kick.png');
 }
 
 .l {
-  background-image: url('./images/snare.png');
+  background-image: url('../assets/images/snare.png');
 }
 
 .set {
