--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -72,7 +72,7 @@ footer {
 }
 
 .set {
-  margin: 10% auto;
+  margin: 200px auto;
 }
 
 /* .game-over {
@@ -108,7 +108,7 @@ footer {
 }
 
 
-@media (max-width: 960px ){
+@media (max-width: 960px ) OR (max-width: 960px){
 
   .container{
     height: 960px;
@@ -116,5 +116,8 @@ footer {
   .everything{
     position:absolute;
     top:500px;
+  }
+  .set{
+    margin-top: 400px !important;
   }
 }
