--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -108,10 +108,15 @@ footer {
 }
 
 
-@media (max-width: 960px ) OR (max-width: 960px){
+@media (max-device-width: 960px ) OR (max-width: 960px){
 
-  .container{
+  /* .container{
     height: 960px;
+  } */
+   
+  .bg-image{
+    height: 100vh;
+    width: 100vh;
   }
   .everything{
     position:absolute;
