--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,20 +1,13 @@
 body {
   text-align: center;
-  background-color: #000000;
-}
-
-.bg-image{
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-}
-
-.container{
+  background-image: url("../assets/images/black.jpg");
+  background-size: cover;
+  background-position: center;
   position: relative;
   height: 100vh;
 }
 
-.everything{
+.container{
   position:absolute;
   top:50px;
   bottom: 0;
@@ -75,19 +68,11 @@ footer {
   margin: 10% auto;
 }
 
-/* .game-over {
-  background-color: red;
-  opacity: 0.8;
-} */
 
 .pressed {
   box-shadow: 0 3px 4px 0 #DBEDF3;
   opacity: 0.5;
 }
-
-/* .red {
-  color: red;
-} */
 
 .drum {
   outline: none;
@@ -110,17 +95,8 @@ footer {
 
 @media (max-device-width: 960px ) OR (max-width: 960px){
 
-  /* .container{
-    height: 960px;
-  } */
    
-  .bg-image{
-    height: 100vh;
-    /* width: 100vh; */
-  }
-   .everything{
-    position:absolute;
-    /* margin-top:10px; */
+   .container{
     top:20%;
   } 
 
